--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "postinstall": "node postinstall.js"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.0",
